@@ -1,3 +1,10 @@
+2006-04-25  Edward Hervey  <edward@fluendo.com>
+
+	* src/htdocs/entities.gst:
+	* src/htdocs/releases/gnonlin/0.10.3.xml:
+	* src/htdocs/releases/gnonlin/Makefile.am:
+	Add release notes for gnonlin 0.10.3 "Birthday Cake"
+
 2006-04-21  Edward Hervey  <edward@fluendo.com>
 
 	* src/htdocs/entities.gst:
